fixed button alignment

--- a/blocks/destination/__title/destination__title.css
+++ b/blocks/destination/__title/destination__title.css
@@ -1,6 +1,7 @@
 .destination__title {
     font-size: 24px;
-    font-weight: 24px;
+    line-height: 29px;
+    font-weight: 900;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
