--- a/blocks/modal/__box/modal__box.css
+++ b/blocks/modal/__box/modal__box.css
@@ -1,8 +1,5 @@
 .modal__box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
     width: 430px;
     display: flex;
     flex-direction: column;
