--- a/blocks/modal/_open/modal_open.css
+++ b/blocks/modal/_open/modal_open.css
@@ -1,3 +1,6 @@
 .modal_open {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
