--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -1,7 +1,7 @@
 .profile__button {
     width: 24px;
     height: 24px;
-    margin:auto auto auto 18px;
+    margin: auto auto auto 18px;
     background-image: url(../../../images/edit-button.svg);
     background-color: inherit;
 }
@@ -10,5 +10,7 @@
     .profile__button {
         width: 16px;
         height: 16px;
+        margin: auto auto auto 10px;
+        line-height: 29px;
     }
 }
